-- SQLite-compatible schema (simplified)
-- UUIDs should be generated by the application layer, not SQLite

-- Enable foreign key support (must be done per connection)
PRAGMA foreign_keys = ON;

-- States table (no dependencies)
CREATE TABLE states (
    state_id TEXT PRIMARY KEY,
    code TEXT CHECK (code IN ('PENDING', 'ERROR', 'SUCCESS', 'PARTIAL', 'PROCESSING', 'VALIDATED', 'REJECTED'))
);

-- RuleSets table (no dependencies)
CREATE TABLE rulesets (
    ruleset_id TEXT PRIMARY KEY,
    description TEXT,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

-- Documents table (depends on states)
CREATE TABLE documents (
    document_id TEXT PRIMARY KEY,
    mask TEXT CHECK (mask IN ('M57_CA', 'M57_CFU', 'M4_CA', 'M4_CFU', 'M57', 'M4')),
    siret TEXT,
    city_name TEXT,
    format TEXT CHECK (format IN ('pdf', 'scan', 'image')),
    document_year TEXT,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    link_bucketS3 TEXT NOT NULL,
    state_id TEXT NOT NULL REFERENCES states(state_id),
    error_message TEXT,
    warning_message TEXT,
    budget_type TEXT CHECK (budget_type IN ('BP', 'BA')),
    nb_pages INTEGER
);

-- Sections table (depends on documents)
CREATE TABLE sections (
    section_id TEXT PRIMARY KEY,
    document_id TEXT NOT NULL REFERENCES documents(document_id) ON DELETE CASCADE,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    section_value TEXT NOT NULL  -- JSON stored as TEXT
);

-- Field Rules table (depends on rulesets)
CREATE TABLE field_rules (
    extraction_rule_id TEXT PRIMARY KEY,
    safir_field_id TEXT NOT NULL,
    mask TEXT NOT NULL CHECK (mask IN ('M57_CA', 'M57_CFU', 'M4_CA', 'M4_CFU', 'M57', 'M4')),
    definition TEXT NOT NULL,  -- JSON stored as TEXT
    ruleset_id TEXT NOT NULL REFERENCES rulesets(ruleset_id) ON DELETE CASCADE
);

-- Validation Rules table (depends on rulesets)
CREATE TABLE validation_rules (
    validation_rule_id TEXT PRIMARY KEY,
    definition TEXT NOT NULL,  -- JSON stored as TEXT
    level_of_problem TEXT CHECK (level_of_problem IN ('ALERTE', 'ECHEC')),
    mask TEXT CHECK (mask IN ('M57_CA', 'M57_CFU', 'M4_CA', 'M4_CFU', 'M57', 'M4')),
    ruleset_id TEXT NOT NULL REFERENCES rulesets(ruleset_id) ON DELETE CASCADE,
    message_if_problem TEXT,
    safir_field_id_list TEXT  -- Array stored as JSON TEXT: '["field1", "field2"]'
);

-- Extraction Runs table (depends on documents and states)
CREATE TABLE extraction_runs (
    run_id TEXT PRIMARY KEY,
    document_id TEXT NOT NULL REFERENCES documents(document_id) ON DELETE CASCADE,
    start_time TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    config TEXT,  -- JSON stored as TEXT
    state_id TEXT NOT NULL REFERENCES states(state_id)
);

-- Extraction Results table (depends on extraction_runs, documents, and states)
CREATE TABLE extraction_results (
    result_id TEXT PRIMARY KEY,
    safir_field_id TEXT NOT NULL,
    run_id TEXT NOT NULL REFERENCES extraction_runs(run_id) ON DELETE CASCADE,
    document_id TEXT NOT NULL REFERENCES documents(document_id) ON DELETE CASCADE,
    value TEXT,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    message_error TEXT,   -- JSON stored as TEXT
    message_warning TEXT, -- JSON stored as TEXT
    state_id TEXT NOT NULL REFERENCES states(state_id)
);

-- Result Feedbacks table (depends on extraction_results)
CREATE TABLE resultfeedbacks (
    feedback_id TEXT PRIMARY KEY,
    result_id TEXT NOT NULL REFERENCES extraction_results(result_id) ON DELETE CASCADE,
    is_technical_error INTEGER,  -- Boolean as INTEGER (0 or 1)
    comment TEXT,
    corrected_value TEXT,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

-- Indexes for foreign keys
CREATE INDEX idx_documents_state_id ON documents(state_id);
CREATE INDEX idx_sections_document_id ON sections(document_id);
CREATE INDEX idx_field_rules_ruleset_id ON field_rules(ruleset_id);
CREATE INDEX idx_validation_rules_ruleset_id ON validation_rules(ruleset_id);
CREATE INDEX idx_extraction_runs_document_id ON extraction_runs(document_id);
CREATE INDEX idx_extraction_runs_state_id ON extraction_runs(state_id);
CREATE INDEX idx_extraction_results_run_id ON extraction_results(run_id);
CREATE INDEX idx_extraction_results_document_id ON extraction_results(document_id);
CREATE INDEX idx_extraction_results_state_id ON extraction_results(state_id);
CREATE INDEX idx_resultfeedbacks_result_id ON resultfeedbacks(result_id);
